--- a/src/app/retry/modal-xml/modal-xml.component.html
+++ b/src/app/retry/modal-xml/modal-xml.component.html
@@ -1,5 +1,9 @@
-<md-progress-bar mode="indeterminate" *ngIf="updatingXml"></md-progress-bar>
-<h2 md-dialog-title>Neptune</h2>
+<md-progress-bar mode="indeterminate"
+    color="accent"
+    *ngIf="updatingXml"></md-progress-bar>
+<h2 md-dialog-title>
+     {{ 'app.retry.results.transaction' | translate }} - {{ transactionId }}
+</h2>
 <div md-dialog-content>
     <div ace-editor
         [(text)]="xmlSelected"
@@ -9,12 +13,15 @@
         [readOnly]="readOnly"
         style="min-height: 400px;max-height: 90%; width:100%; overflow: auto;"></div>
 </div>
-<div md-dialog-actions align="end">
+<div md-dialog-actions
+    align="end">
     <button md-raised-button
-        style="padding-right: 10px"
+        style="margin: 5px"
         color="primary"
+        [style.display]="readOnly ? 'none' : 'block' "
         (click)="updateXml()">{{'app.common.update' | translate}}</button>
     <button md-raised-button
+        style="margin: 5px"
         color="primary"
         md-dialog-close>{{'app.common.close' | translate}}</button>
 </div>
