--- a/src/app/master/service/service-detail/service-detail.component.scss
+++ b/src/app/master/service/service-detail/service-detail.component.scss
@@ -3,6 +3,10 @@
 }
 
 .form_control_container {
-    display: block;
+    width: 100%;
     margin-bottom: 25px;
+}
+
+[hidden] {
+  display: none !important;
 }
