--- a/src/app/retry/admin-retry/admin-retry.component.scss
+++ b/src/app/retry/admin-retry/admin-retry.component.scss
@@ -38,3 +38,10 @@ md-card {
 	text-align:center;
 	width:100px;
 }
+
+md-spinner {
+  float:left;
+  width: 24px;
+  height: 24px;
+  margin: 5px 10px 0px 0px;
+}
