--- a/src/app/retry/admin-retry/admin-retry.component.html
+++ b/src/app/retry/admin-retry/admin-retry.component.html
@@ -109,6 +109,7 @@
                             *ngIf="isSendingRetry"
                             color="accent"
                             mode="indeterminate">
+                            </md-spinner>
                     </ng-template>
                 </p-column>
                 <ng-template let-transactionTemplate
