--- a/src/app/retry/retry-history/retry-history.component.html
+++ b/src/app/retry/retry-history/retry-history.component.html
@@ -1,6 +1,7 @@
 <md-progress-bar mode="indeterminate"
     color="accent"
-    *ngIf="isChargingInitialData"></md-progress-bar>
+    *ngIf="isChargingInitialData">
+</md-progress-bar>
 <div class="card-container">
     <md-card class="search md_card_app">
         <md-card-title>{{'app.retry.filter' | translate}}</md-card-title>
@@ -87,21 +88,18 @@
             <button md-mini-fab
                 type="button"
                 (click)="onSearch()"
-                [disabled]="(isSearching || !form.controls.application.value || !form.controls.serviceControl.value)"
                 color="primary"
                 mdTooltip="{{'app.common.search' | translate}}">
                 <md-icon>search</md-icon>
             </button>
         </md-card-actions>
     </md-card>
-    <md-card class="result md_card_app"
-        *ngIf="showTransactions">
+    <md-card class="result md_card_app" *ngIf="showTransactions">
         <md-card-content>
             <md-progress-bar mode="indeterminate"
                 color="accent"
                 *ngIf="isSearching"></md-progress-bar>
-            <p-dataTable [value]="transactions"
-                *ngIf="!isSearching">
+            <p-dataTable [value]="transactions">
                 <p-header>{{'app.retry.transactions' | translate}}</p-header>
                 <p-column field="id"
                     header="{{'app.retry.results.transaction' | translate}}"></p-column>
@@ -123,12 +121,13 @@
                             class="xml"
                             (click)="showXml(transactionTemplate)"
                             mdTooltip="{{'app.common.xml' | translate}}">settings_ethernet</md-icon>
+                        <md-spinner class="example-margin"
+                            color="accent"
+                            *ngIf="isShowingXml && ( selectedTransactionXml &&transactionTemplate.id == selectedTransactionXml.id)"
+                            mode="indeterminate">
+                        </md-spinner>
+
                     </ng-template>
-                    <md-spinner class="example-margin"
-                        *ngIf="isShowingXml"
-                        color="accent"
-                        mode="indeterminate">
-                    </md-spinner>
                 </p-column>
                 <ng-template let-transactionTemplate
                     pTemplate="rowexpansion">
