--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
             (click)="sidenav.toggle()">
             <md-icon>menu</md-icon>
         </button>
-        <img src="../assets/images/proteccion-logo.png"
+        <img src="./assets/images/proteccion-logo.png"
             alt="proteccionycesantias" />
         <span class="example-spacer"></span>
         <button md-icon-button
