--- a/src/app/retry/admin-retry/admin-retry.component.scss
+++ b/src/app/retry/admin-retry/admin-retry.component.scss
@@ -49,3 +49,13 @@ md-spinner {
 .example-margin {
   margin: 0 10px;
 }
+
+
+.flex_container{
+  display: flex;
+  flex-wrap: wrap; 
+}
+
+.section_flex{
+  
+}
