--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
                 <span md-line
                     class="secondary">{{'app.sideNav.application.description' | translate}}</span>
             </a>-->
-            <a md-list-item
+            <a md-list-item *ngIf="authManager.isAdmin"
                 (click)="sidenav.close(); goTo('report/history')">
                 <md-icon md-list-icon
                     class="proteccion"
