--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,6 +127,7 @@ md-input-container {
 
 md-select {
     min-width: calc(#{$min-width-controls} - 10px);
+    flex: 1 1 auto;
 }
 
 md-datepicker {
