--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,8 @@
                 <span md-line
                     class="secondary">{{'app.sideNav.application.description' | translate}}</span>
             </a>-->
-            <a md-list-item *ngIf="authManager.isAdmin"
+            <!--*ngIf="authManager.isAdmin"-->
+            <a md-list-item
                 (click)="sidenav.close(); goTo('report/history')">
                 <md-icon md-list-icon
                     class="proteccion"
@@ -71,10 +72,10 @@
         <img src="./assets/images/proteccion-logo.png"
             alt="proteccionycesantias" />
         <span class="example-spacer"></span>
-        <button md-icon-button
+        <!--<button md-icon-button
             [mdMenuTriggerFor]="menu">
             <md-icon>language</md-icon>
-        </button>
+        </button>-->
         <md-menu #menu="mdMenu">
             <button md-menu-item
                 (click)="changeLanguage('es')">
